<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11dp">

        <View
            android:id="@+id/view_top2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username"
            app:layout_constraintVertical_bias="0.508"
            tools:layout_editor_absoluteX="0dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="24dp"
            android:src="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="204dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username"
            app:layout_constraintVertical_bias="0.508"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_item_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:text="@string/repository"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_value_repository"
            android:layout_width="8dp"
            android:layout_height="18dp"
            android:layout_marginTop="5dp"
            android:text="@string/_0"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_repository"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="@+id/tv_item_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_repository" />

        <TextView
            android:id="@+id/tv_item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_repository"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_username"
            app:layout_constraintStart_toStartOf="@+id/tv_item_username"
            app:layout_constraintTop_toTopOf="@+id/tv_item_repository"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_value_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/google"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_company"
            app:layout_constraintStart_toStartOf="@+id/tv_item_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_company" />

        <TextView
            android:id="@+id/tv_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/location"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_company"
            app:layout_constraintStart_toEndOf="@+id/tv_item_company"
            app:layout_constraintTop_toTopOf="@+id/tv_item_company" />

        <TextView
            android:id="@+id/tv_value_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/indonesia"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_location"
            app:layout_constraintStart_toStartOf="@+id/tv_item_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_location" />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <include-->
    <!--            layout="@layout/layout_description"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent" />-->

    <!--        <include-->
    <!--            android:id="@+id/include_tab_layout"-->
    <!--            layout="@layout/layout_tab"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/include_description" />-->

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</ScrollView>